# nott-your-timetable

./: .gitignore  .pylintrc  LICENSE  Pipfile  README.md  cli.py  nott-your-timetable  nott-your-timetable-folder.spec  nott-your-timetable.spec  nott_your_timetable.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: compile-executable.yml  pylint.yml  python-publish.yml
scapers/: deptarray.js  programmearray.js
src/nott_your_timetable/: __init__.py  cli.py  constants.py  gui.py  nott_your_timetable.py  utils.py
src/nott_your_timetable/data/: dept.json  program.json
src/nott_your_timetable/utils/: data.py  enums.py  parsers.py  range_handlers.py  weeks.py
