[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nott-your-timetable"
description = "Exports Timetable for University of Nottingham Malaysia Student."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests"
]
version = "0.0.1"
authors = [
    { name = "ecyht2", email = "ecyht2@nottingham.edu.my" }
]

[project.scripts]
nott-your-timetable = "nott_your_timetable.nott_your_timetable:main_cli"
