[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nott-your-timetable"
description = "Exports Timetable for University of Nottingham Malaysia Student."
readme = "README.md"
license = { text = "GPL-3.0 license" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "icalendar"
]
dynamic = ["version"]
authors = [
    { name = "ecyht2", email = "ecyht2@nottingham.edu.my" }
]

[project.scripts]
nott-your-timetable = "nott_your_timetable.nott_your_timetable:main_cli"

[project.urls]
"Homepage" = "https://github.com/ecyht2/nott-your-timetable"

[tool.setuptools.dynamic]
version = { attr = "nott_your_timetable.__version__" }

[tool.setuptools.package-data]
"mypkg.data" = ["*.json"]
